Design changes and also the logic

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Color Changer</title>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <nav>
+        <div class="logo">Color Changer</div>
        <ul class="nav-links">
         <li>Home</li>
-        <li>About me </li>
-        <li>Projects</li>
+        <li>About me</li>
         <li>Skills</li>
-        <li>Contact</li>
+        <li>Projects</li>
+        <li>Contact Me</li>
        </ul>
     </nav>
 
@@ -25,17 +28,38 @@
     </main>
 
     <footer>
-        <div class="logo">
-            <h2>Logo </h2>
+        <div class="footer-logo">
+            <p class="f-logo">Color Changer</p>
+            <p class="desc">A simple project created for learning JavaScript DOM manipulation by changing the background color with a single click.</p>
         </div>
         <div class="links">
-            <h3>Links</h3>
-            <ul class="footer-links">
-                <li>Home</li>
-                <li>Projects</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ul>
+            <div class="link-group">
+                <h3>Explore</h3>
+                <ul class="footer-links">
+                    <li>Home</li>
+                    <li>About Me</li>
+                    <li>Designs</li>
+                    <li>Projects</li>
+                </ul>
+            </div>
+            <div class="link-group">
+                <h3>Social</h3>
+                <ul class="footer-links">
+                    <li>LinkedIn</li>
+                    <li>Github</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                </ul>
+            </div>
+            <div class="link-group">
+                <h3>Resources</h3>
+                <ul class="footer-links">
+                    <li>Guides</li>
+                    <li>Templates</li>
+                    <li>Webinars</li>
+                    <li>Case Studies</li>
+                </ul>
+            </div>
         </div>
     </footer>
     
